<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="button_search">Поиск</string>
    <string name="button_mediat">Медиатека</string>
    <string name="button_settings">Настройки</string>
    <string name="choose_theme">Тёмная тема</string>
    <string name="needSupport">Написать в поддержку</string>
    <string name="shareIt">Поделиться приложением</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="search_here">Поиск</string>
    <string name="link_to_yandex_course">https://practicum.yandex.ru/android-developer/</string>
    <string name="this_app_made_with_course">Курс с помощью которого сделано это приложение</string>
    <string name="share_with_help">Поделиться с помощью</string>
    <string name="my_mail">enu.w@yandex.ru</string>
    <string name="mail_theme_to_devs">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="thanks_to_devs">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="link_to_offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="problem_with_connection">Проблемы со связью\n\nЗагрузка не удалась. Проверьте\nподключение к интернету</string>
    <string name="refresh_search_button">Обновить</string>
    <string name="You_searched_for">Вы искали</string>
    <string name="Clear_history">Очистить историю</string>
    <string name="Back_from_screen_button">Вернуться на предыдущий экран</string>
    <string name="Track_Artwork">Обложка альбома или трэка</string>

    <string name="Track_played_time">0:00</string>
    <string name="Track_duration">Длительность</string>
    <string name="Track_Collection">Альбом</string>
    <string name="Release_year">Год</string>
    <string name="Track_genre">Жанр</string>
    <string name="Country">Страна</string>

    <string name="Mediateka">Медиатека</string>
    <string name="Prefered_tracks">Избранные треки</string>
    <string name="Playlists">Плейлисты</string>
    <string name="New_playlist">Новый плейлист</string>
    <string name="Your_media_library_is_empty">Ваша медиатека пуста</string>
    <string name="You_didnt_create_any_playlist">Вы не создали\n ни одного плейлиста</string>
    <string name="Playlist_artwork">Обложка плэйлиста</string>
    <string name="Playlist_name">Название*</string>
    <string name="Playlist_description">Описание</string>
    <string name="Playlist_create">Создать</string>

    <string name="contentDescription_share_playlist">Поделиться плейлистом</string>
    <string name="contentDescription_playlist_options">Опции плейлиста</string>

    <string name="Finish_creating_a_playlist">Завершить создание плейлиста?</string>
    <string name="Unsaved_data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="Cancel">Отмена</string>
    <string name="Complete">Завершить</string>
    <string name="playlist_created">Плейлист %s создан</string>
    <plurals name="tracks">
        <item quantity="zero">%d треков</item>
        <item quantity="one">%d трек</item>
        <item quantity="two">%d трека</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>
    <plurals name="summary_time">
        <item quantity="zero">%d минут</item>
        <item quantity="one">%d минута</item>
        <item quantity="two">%d минуты</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>
    <string name="add_to_playlist">Добавить в плейлист</string>

    <string name="new_track_added_to_playlist">Добавлено в плейлист %s</string>
    <string name="allready_added_to_playlist">Трек уже добавлен в плейлист %s</string>

    <string name="Do_you_want_delete_track">Хотите удалить трек?</string>
    <string name="Yes_answer">Да</string>
    <string name="No_answer">Нет</string>

    <string name="You_cant_share_this_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="Playlist_title_message">Поделиться плейлистом</string>
    <string name="Playlist_subject">Мой плейлист</string>
    <string name="Playlist_tracks_amount">%s треков</string>
    <string name="Num_artist_trackName_trackLength_">%s. %s+ - %s (%s)</string>

    <string name="Menu_share">Поделиться</string>
    <string name="Menu_edit_information">Редактировать информацию</string>
    <string name="Menu_delete_playlist">Удалить плейлист</string>
    <string name="Do_you_want_delete_playlist">Хотите удалить плейлист %s?</string>
    <string name="Modify_playlist_save">Сохранить</string>
    <string name="Modify_playlist_modify">Редактировать</string>



</resources>