<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="?attr/colorPrimary">

        <TextView
            android:layout_width="304dp"
            android:layout_height="56dp"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_medium"
            android:paddingStart="@dimen/margin_medium"
            android:gravity="center_vertical"
            android:font="@font/ys_display_medium"
            android:letterSpacing="0"
            android:text="@string/app_name"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="24dp"
            android:background="?attr/colorPrimary">

            <Button
                android:id="@+id/searchbutton"
                style="@style/ButtonOnMainStyle"
                android:text="@string/button_search"
                app:cornerRadius="@dimen/corner_radius"
                app:icon="@drawable/ic_search_24"
                app:iconGravity="textStart"
                app:iconTint="@color/YP_Black"/>

            <Button
                android:id="@+id/libbutton"
                style="@style/ButtonOnMainStyle"
                android:text="@string/button_mediat"
                app:cornerRadius="@dimen/corner_radius"
                app:icon="@drawable/ic_media_lib_24"
                app:iconGravity="textStart"
                app:iconTint="@color/YP_Black" />

            <Button
                android:id="@+id/setbutton"
                style="@style/ButtonOnMainStyle"
                android:text="@string/button_settings"
                app:cornerRadius="@dimen/corner_radius"
                app:icon="@drawable/ic_gear_24"
                app:iconGravity="textStart"
                app:iconTint="@color/YP_Black" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>