<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MusicPlayerScreen"
    tools:context=".player.ui.MusicPlayerFragment">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="?attr/colorSecondary"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/back_from_new_playlist_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/Back_from_screen_button"
            app:srcCompat="@drawable/ic_back_arrow_24" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="start|center_vertical"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center_vertical"
            android:letterSpacing="0"
            android:paddingStart="12dp"
            android:text="@string/New_playlist"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="22sp" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp"/>

    <ImageView
        android:id="@+id/TrackArtwork"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@+id/leftBorder"
        app:layout_constraintEnd_toStartOf="@+id/rightBorder"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="82dp"
        android:src="@drawable/img_placeholder_312"
        android:scaleType="fitXY"
        app:layout_constraintDimensionRatio="1:1"
        android:contentDescription="@string/Playlist_artwork"/>

    <TextView
        android:id="@+id/current_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constrainedWidth="true"
        app:layout_constraintStart_toEndOf="@+id/leftBorder"
        app:layout_constraintEnd_toStartOf="@+id/rightBorder"
        app:layout_constraintTop_toBottomOf="@id/current_Played_Track"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="12dp"
        style="@style/Black_White_Text14sp_medium"
        android:ellipsize="end"
        android:maxLines="1"
        tools:text="The Beatles"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/playTrack_button"
        android:layout_width="0dp"
        android:layout_height="44dp"
        app:layout_constraintStart_toEndOf="@+id/leftBorder"
        app:layout_constraintEnd_toStartOf="@+id/rightBorder"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"
        android:layout_gravity="center"
        android:text="@string/Playlist_create"
        android:fontFamily="@font/ys_display_medium"
        android:background="@drawable/tap_selector"/>

    <EditText
        android:id="@+id/inputPlaylistName"
        style="@style/Black_White_Text16sp_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="8.5dp"
        android:background="@null"
        android:drawableStart="@drawable/ic_search_16"
        android:drawablePadding="1dp"
        android:focusableInTouchMode="true"
        android:hint="@string/Playlist_name"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:lines="1"
        android:maxLength="30"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textCursorDrawable="@drawable/ic_cursor" />




    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/firstLeftBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/firstRightBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp"/>


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/textsBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_tags="track_length, track_collection, release_year, genre, country"
        app:barrierDirection="end" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>