<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/PlayListScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/ButtonAddNewPlayList"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="?attr/colorOnSecondary"
        android:fontFamily="@font/ys_display_medium"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:letterSpacing="0"
        android:text="@string/New_playlist"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="?attr/colorSecondary"
        android:textSize="14sp"
        app:cornerRadius="54dp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/noPlayListMessage"
        android:visibility="visible">
        <ImageView
            android:id="@+id/noPlayList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="106dp"
            android:scaleType="center"
            android:src="@drawable/ic_nothing_found_120"
            android:contentDescription="@string/nothing_found"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="242dp"
            android:fontFamily="@font/ys_display_medium"
            android:letterSpacing="0"
            android:text="@string/You_didnt_create_any_playlist"
            android:textAlignment="center"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="19sp"/>
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/PlayListsScroll"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="76dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>